--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "private": true,
   "dependencies": {
+    "global": "^4.4.0",
+    "netlify-cli": "^8.0.6",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
