--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,6 @@
 
 [[redirects]]
   from = "/api/InfoPoint/rest/Vehicles/GetAllVehiclesForRoutes"
-  to = ".netlify/functions/GetAllVehiclesForRoutes/:splat"
+  to = "/.netlify/functions/GetAllVehiclesForRoutes/:splat"
   status = 200
   force = true
