Include function data files.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 
 [functions]
   directory = "src"
+  included_files = ["data/*.json"]
 
 [[redirects]]
   from = "/api/InfoPoint/rest/Vehicles/GetAllVehiclesForRoutes"
