--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 
 [functions]
   directory = "src"
-  included_files = ["data/*.json"]
+  included_files = ["src/GetAllVehiclesForRoutes/data/*.json"]
 
 [[redirects]]
   from = "/api/InfoPoint/rest/Vehicles/GetAllVehiclesForRoutes"
